--- a/bsip/bsip/Info.plist
+++ b/bsip/bsip/Info.plist
@@ -24,6 +24,9 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
 		<string>voip</string>
 	</array>
 </dict>
